--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
   position: relative;
   width: 300px;
 
-  background: transparent url("../images/clock-face.svg"
+  background: transparent url("../images/clock-face.svg")
 }
 
 .clock-center {
